--- a/club.html
+++ b/club.html
@@ -149,7 +149,7 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                Club Balance (TEST)</div>
+                                                Club Balance (RAUCO)</div>
                                             <div class="h5 mb-0 font-weight-bold text-gray-800 club_balance">-</div>
                                         </div>
                                         <div class="col-auto">
@@ -256,7 +256,7 @@
                                 </div>
                                 <div class="card-body">
                                     <p>
-                                        Amount in TEST: <br /><input type="number" id="aeAmount" class="form-control" /> <br />
+                                        Amount in RAUCO: <br /><input type="number" id="aeAmount" class="form-control" /> <br />
                                         <br />
                                         <a href="#" id="btnContributeClub" class="btn btn-success">Confirm</a> <br>
                                         <div class="successContributeClub valid-feedback" style="display: none;"></div>
