--- a/createclub.html
+++ b/createclub.html
@@ -149,7 +149,7 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                Balance (TEST)</div>
+                                                Balance (RAUCO)</div>
                                             <div class="h5 mb-0 font-weight-bold text-gray-800 view_balance_address">-</div>
                                         </div>
                                         <div class="col-auto">
@@ -216,7 +216,7 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             Club Name: <input type="text" id="club_name" class="form-control form-control-user" placeholder="Give a name for this Investment Club"> <br />
-                                            Minimum to join: <input type="number" id="club_minimum" class="form-control form-control-user" placeholder="Give the minimum TEST to join the club"> <br />
+                                            Minimum to join: <input type="number" id="club_minimum" class="form-control form-control-user" placeholder="Give the minimum RAUCO to join the club"> <br />
                                             <input type="button" id="createClubButton" value="Create" class="btn btn-primary btn-block" />
                                             <span class="loading_message_creating" style="display: none;">Creating the club...</span> 
                                             <p class="valid-feedback" id="successCreateClub" style="display: none;"></p>
