--- a/createproposal.html
+++ b/createproposal.html
@@ -147,7 +147,7 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                Club Balance (TEST)</div>
+                                                Club Balance (RAUCO)</div>
                                             <div class="h5 mb-0 font-weight-bold text-gray-800 club_balance">-</div>
                                         </div>
                                         <div class="col-auto">
@@ -215,7 +215,7 @@
                                         <div class="col-md-12">
                                             Description: <input type="text" id="proposal_description" class="form-control form-control-user" placeholder="Give a description for this proposal"> <br />
                                             Destination address: <input type="text" id="proposal_address" class="form-control form-control-user" placeholder="Enter the destination address: 0x....."> <br />
-                                            Amount (in TEST): <input type="number" id="proposal_amount" class="form-control form-control-user" placeholder="Enter the amount"> <br /><br /><br />
+                                            Amount (in RAUCO): <input type="number" id="proposal_amount" class="form-control form-control-user" placeholder="Enter the amount"> <br /><br /><br />
                                             <input type="button" id="createProposalButton" value="Create" class="btn btn-primary btn-block" />
                                             <span class="loading_message_creating" style="display: none;">Creating the proposal...</span> <br />
                                             <p class="valid-feedback" id="successCreateProposal" style="display: none;"></p>
